tests/tests2/62_enumerator_redefinition.expect
62_enumerator_redefinition.c:2: error: redefinition of enumerator 'RED'
