tests/tests2/62_enumerator_redefinition.c
enum color {RED, GREEN, BLUE};
enum rgb {RED, G, B};

enum color c = RED;
